# ticklist

./: .gitignore  babel.config.json  compose-dev.yaml  compose.yaml  package-lock.json  package.json  webpack.config.js
app/: .dockerignore  Dockerfile  app.js  babel.config.js  package.json  webpack.config.js
app/src/: app.js  client.js  data.js  index.html  index.js  routes.js  server.js
app/src/components/: header.js  item.js  list.js  page.js  properties.js  tag.js
app/src/pages/: account.js  browse.js  item.js  list.js
app/src/public/: index.html
app/src/public/style/: reset.css  style.scss
server/: .dockerignore  Dockerfile  index.js  package.json
server/public/: index.html
server/public/style/: style.css
server/setup/: create_tables.sql  create_users.sql
server/sql/: create_admin.sql  create_data.sql  create_db.sql  create_tables.sql
server/src/: server.js
server_old/: Dockerfile  package-lock.json
server_old/sql/: create_admin  create_data  create_db  create_db.sql
server_old/src/: server.js
src/: app.js  index.js  style.css  style.scss
ticklist-server/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile
ticklist-server/sql/: create_data  create_data.sql  create_tables  create_tables.sql  setup
ticklist-server/src/: conn.rs  error.rs  item.rs  lib.rs  main.rs  slug.rs
