[package]
name = "ticklist"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
actix-web = "4"
actix-cors = "0.6"
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15.0"
futures = "0.3"
jsonschema = "0.17.1"
sqlx = { version = "0.7", features = ["runtime-async-std-native-tls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
